# top-down-shooter

./: .gitignore  CMakeLists.txt  README  compile_commands.json
src/: Animations.hpp  Character.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Textures.cpp  Textures.hpp  main.cpp  main.cs  raylib.h
